@@ -34,7 +34,7 @@
       type="xyz.zedler.patrick.grocy.activity.MainActivity" />
     <variable
       name="fragment"
-      type="xyz.zedler.patrick.grocy.fragment.SettingsCatShoppingModeFragment" />
+      type="xyz.zedler.patrick.grocy.fragment.ShoppingModeOptionsFragment" />
     <variable
       name="sharedPrefs"
       type="android.content.SharedPreferences" />
@@ -56,7 +56,7 @@
       <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         style="@style/Widget.Grocy.Toolbar.Back"
-        app:title="@string/title_shopping_mode" />
+        app:title="@string/title_options" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
