@@ -2,6 +2,7 @@
 
 - New: Recipe details are now displayed on a separate page, not a bottom sheet anymore
 - New: Recipes page now has checkbox options for all additional fields
+- New: Shopping mode options are now reachable through shopping mode menu and removed from settings
 - Improved: Database exceptions are now caught and displayed (#698)
 - Improved: Pictures in recipe or product descriptions now can be up to 10MB large (#698)
 - Improved: Other design for recipe page
